overlays/prod/kubeflow-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow-prod
  labels:
    control-plane: kubeflow
    istio-injection: enabled
