overlays/prod/kubeflow-prod/oauth2-proxy-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy-prod
  namespace: kubeflow-prod
spec:
  gateways:
  - kubeflow-prod/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /oauth2/
    route:
    - destination:
        host: oauth2-proxy.oauth2-proxy.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex-prod
  namespace: kubeflow-prod
spec:
  gateways:
  - kubeflow-prod/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /dex/
    route:
    - destination:
        host: dex.auth.svc.cluster.local
        port:
          number: 5556
